Show next games

--- a/FootballChairman/FootballChairman.csproj
+++ b/FootballChairman/FootballChairman.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\FootballChairman.Services\FootballChairman.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
