--- a/FootballChairman.Repositories/FootballChairman.Repositories.csproj
+++ b/FootballChairman.Repositories/FootballChairman.Repositories.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Autofac" Version="6.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FootballChairman.Models\FootballChairman.Models.csproj" />
+  </ItemGroup>
+
 </Project>
