--- a/.editorconfig
+++ b/.editorconfig
@@ -17,3 +17,6 @@ dotnet_diagnostic.CS8601.severity = none
 
 # CS8603: Possible null reference return.
 dotnet_diagnostic.CS8603.severity = none
+
+# CS8605: Unboxing a possibly null value.
+dotnet_diagnostic.CS8605.severity = none
